# eolabtools

./: .gitignore  AUTHORS  CONTRIBUTING.rst  README.md  pyproject.toml  pyproject_old.toml  pytest.ini  requirements.yml  setup.py  setup_old.py
.github/workflows/: cd.yml  ci.yml
detection_orientation_culture/: README.md  environment.yml
detection_orientation_culture/detection_orientation_culture/: compare_orientations.py  compare_orientations.sh  detect_orientations_qsub.sh  lsd_cmla_qsub.sh  orientation_detection.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  detect_cult.rst  index.rst  install.rst  night_osm.rst  sunmap_gen.rst
docs/source/orcult_doc/: orcult_starter.rst  ref.bib  remotesensing.rst
docs/source/sunmap_doc/: listing_2tiles.lst
night_osm_registration/: README.md  apply_vector_registration.py  night_osm_registration.py
src/detection_orientation_culture/detection_orientation_culture/: line_detection_lsdcmla.py  orientation_detection.py  utils.py
src/eolabtools/: .~lock.reu_solange_6_06.odt#  avancement_Sunmapgen.odt  avancement_detecOrcult.odt  avancement_nightOSMReg.odt  reu_solange_6_06.odt
src/eolabtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/eolabtools/detection_orientation_culture/: README.md  environment.yml  orientation_detection.py
src/eolabtools/detection_orientation_culture/detection_orientation_culture/: detect_orientations_qsub.sh  detect_orientations_slurm.slurm  generate_slope_aspect.sh  orientation_detection.py  utils.py
src/eolabtools/night_osm/: requirements.yml
src/eolabtools/night_osm/night_osm_registration/: osm_utils.py  register_image.py  shift.py
src/eolabtools/night_osm_registration/: AUTHORS.rst  apply_vector_registration.py  night_osm_registration.py  osm_utils.py  register_image.py  requirements.txt  requirements.yml  shift.py  utils.py
src/eolabtools/sun_map_generation/: SunMapGenerator.py  requirements.txt  requirements.yml
src/eolabtools/sun_map_generation/rastertools/: .coverage  AUTHORS.rst
src/eolabtools/sun_map_generation/rastertools/rastertools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/eolabtools/sun_map_generation/src/: SunMapGenerator.py
src/night_osm_registration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sun_map_generation/listings/: listing_test.lst  test1.lst  test4.lst  test5.lst
src/sun_map_generation/notebooks/.ipynb_checkpoints/: version_test-checkpoint.ipynb
sun_map_generation/: README.md  requirements.yml
sun_map_generation/listings/: listing.lst  test2.lst
sun_map_generation/listings/.ipynb_checkpoints/: listing-checkpoint.lst
sun_map_generation/notebooks/: version_test.ipynb
sun_map_generation/src/: SunMapGenerator.py  sun_map_script.slurm
tests/: conftest.py  test_nightosm.py  test_orcult.py  test_sunmap.py  test_utils.py
tests/data/DetecOrCult/reference_results/2023_ortho1/: centroids.dbf  centroids.shp  centroids.shx  computation_time.csv  convex_hulls.dbf  convex_hulls.shp  convex_hulls.shx  kept_lines.dbf  kept_lines.shp  kept_lines.shx  orientations.dbf  orientations.shp  orientations.shx  rpg_patches.dbf  rpg_patches.shp  rpg_patches.shx  (+1 more)
tests/data/DetecOrCult/test_data/: RGE_ALTI_76_5m_ASPECT_crop_ortho1.tif  RGE_ALTI_76_5m_SLOPE_crop_ortho1.tif
(+83 files in other folders)
