[build-system]
requires = ["setuptools>=61", "wheel","jinja2>=3.1", "markupsafe>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sun_map_generation"
version = "0.0.0"
description = "Tool for generating sunshine maps for a specific area at a specific time"
requires-python = ">=3.8.13"
keywords = ["gis", "remote sensing", "nighttime imagery"]
dependencies = [
    "pytest-cov",
    "georastertools",
    "gdal==3.5.0",
    "numpy==1.24.4",
    "timezonefinder",
    "ephem",
    "pyyaml",
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
